// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> component its snapshot matches story Default 1`] = `
<div>
  <div
    class="cds--form-item"
  >
    <div
      class="cds--text-area__label-wrapper"
    >
      <label
        class="cds--label"
        for="some_id"
      >
        A text field (optional)
      </label>
    </div>
    <div
      class="cds--text-area__wrapper"
    >
      <textarea
        class="cds--text-area"
        cols="50"
        id="some_id"
        name="some_name"
        placeholder="Description"
        rows="4"
      />
    </div>
  </div>
</div>
`;

exports[`<TextArea /> component its snapshot matches story OnFieldPanel 1`] = `
.c0 {
  background-color: #f4f4f4;
}

.c1 {
  margin-bottom: 1.5rem;
  padding: 1rem;
}

.c2 {
  font-weight: bold;
  margin-bottom: 1rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="cds--layer-two c1"
    >
      <div
        class="c2"
      >
        A fieldpanel
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--text-area__label-wrapper"
        >
          <label
            class="cds--label"
            for="some_id"
          >
            A text field (optional)
          </label>
        </div>
        <div
          class="cds--text-area__wrapper"
        >
          <textarea
            class="cds--text-area"
            cols="50"
            id="some_id"
            name="some_name"
            placeholder="Description"
            rows="4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> component its snapshot matches story TestOnForm 1`] = `
<div>
  <div>
    <div>
      <div>
        react-hook-form
      </div>
      <div
        style="display: flex; justify-content: space-between;"
      >
        <div>
          <div
            class="cds--form-item"
          >
            <div
              class="cds--text-area__label-wrapper"
            >
              <label
                class="cds--label"
                for="field"
              >
                A text field (optional)
              </label>
            </div>
            <div
              class="cds--text-area__wrapper"
            >
              <textarea
                class="cds--text-area"
                cols="50"
                id="field"
                name="field"
                placeholder="Description"
                rows="4"
              />
            </div>
          </div>
        </div>
        <div
          style="width: 25%; padding: 1rem; background: rgb(238, 238, 238);"
        >
          <div>
            "Lorem ipsum dolor sit amet"
          </div>
          <div
            style="margin-top: 1rem;"
          >
            <input
              id="formData"
              style="padding: 0.5rem;"
              type="text"
            />
            <button
              style="padding: 0.5rem;"
            >
              Set
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style="margin-top: 2rem;"
    >
      <div>
        as standalone field
      </div>
      <div
        style="display: flex; justify-content: space-between;"
      >
        <div>
          <div
            class="cds--form-item"
          >
            <div
              class="cds--text-area__label-wrapper"
            >
              <label
                class="cds--label"
                for="fieldStandalone"
              >
                A text field (optional)
              </label>
            </div>
            <div
              class="cds--text-area__wrapper"
            >
              <textarea
                class="cds--text-area"
                cols="50"
                id="fieldStandalone"
                name="some_name"
                placeholder="Description"
                rows="4"
              >
                Lorem ipsum dolor sit amet
              </textarea>
            </div>
          </div>
        </div>
        <div
          style="width: 25%; padding: 1rem; background: rgb(238, 238, 238);"
        >
          <div>
            "Lorem ipsum dolor sit amet"
          </div>
          <div
            style="margin-top: 1rem;"
          >
            <input
              id="sData"
              style="padding: 0.5rem;"
              type="text"
            />
            <button
              style="padding: 0.5rem;"
            >
              Set
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> component its snapshot matches story WithError 1`] = `
<div>
  <div
    class="cds--form-item"
  >
    <div
      class="cds--text-area__label-wrapper"
    >
      <label
        class="cds--label"
        for="some_id"
      >
        A text field (optional)
      </label>
    </div>
    <div
      class="cds--text-area__wrapper"
      data-invalid="true"
    >
      <svg
        aria-hidden="true"
        class="cds--text-area__invalid-icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
        />
        <path
          d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
          data-icon-path="inner-path"
          opacity="0"
        />
      </svg>
      <textarea
        aria-describedby="some_id-error-msg"
        aria-invalid="true"
        class="cds--text-area cds--text-area--invalid"
        cols="50"
        id="some_id"
        name="some_name"
        placeholder="Description"
        rows="4"
      />
    </div>
    <div
      class="cds--form-requirement"
      id="some_id-error-msg"
      role="alert"
    >
      Some error text
    </div>
  </div>
</div>
`;

exports[`<TextArea /> component its snapshot matches story WithHelpText 1`] = `
<div>
  <div
    class="cds--form-item"
  >
    <div
      class="cds--text-area__label-wrapper"
    >
      <label
        class="cds--label"
        for="some_id"
      >
        A text field (optional)
      </label>
    </div>
    <div
      class="cds--text-area__wrapper"
    >
      <textarea
        class="cds--text-area"
        cols="50"
        id="some_id"
        name="some_name"
        placeholder="Description"
        rows="4"
      />
    </div>
    <div
      class="cds--form__helper-text"
    >
      Some help text
    </div>
  </div>
</div>
`;
